# Email-sorter-

./: .gitignore  CMakeLists.txt  README.md
.kiro/: design.md
.kiro/specs/email-auto-sorter/: requirements.md  tasks.md
